--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
     nav a {
       margin: 0 1.5rem;
       text-decoration: none;
-      color: #333;
+      color: #007a5e;
       font-weight: 500;
       font-size: 1rem;
     }
