--- a/templates/select_plan.html
+++ b/templates/select_plan.html
@@ -52,7 +52,8 @@
 </head>
 <body>
 
-  <h1>Wähle dein Echo Vault Zugangspaket</h1>
+  
+<h1>Wähle dein Echo Vault Zugangspaket</h1>
 <div class="plans">
 
   <div class="plan">
@@ -66,7 +67,7 @@
   <div class="plan">
     <h2>PLUS – 4,99 EUR</h2>
     <p>PDF + KI-Antwort (Text). Keine Audiofunktion.</p>
-    <a href="https://buy.stripe.com/14A00jgQv8YY5ky5T9b3q01" target="_blank">
+    <a href="https://buy.stripe.com/14A00jgQv8YY5ky5T9b3q01?redirect=https://doneo24.com/formular" target="_blank">
       <button type="button">Echo Vault PLUS buchen</button>
     </a>
   </div>
@@ -74,12 +75,13 @@
   <div class="plan">
     <h2>PRO – 9,99 EUR</h2>
     <p>PDF + KI-Antwort (Text & Audio) + Uploads freigeschaltet.</p>
-    <a href="https://buy.stripe.com/bJecN59o30sseV83L1b3q00" target="_blank">
+    <a href="https://buy.stripe.com/bJecN59o30sseV83L1b3q00?redirect=https://doneo24.com/formular" target="_blank">
       <button type="button">Echo Vault PRO buchen</button>
     </a>
   </div>
 
 </div>
+
 
 
 </body>
