--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,8 @@
 {% block content %}
 
 <!-- === DONEO24 HEADER (für index.html) === -->
-<header style="
+
+<div style="
   background: linear-gradient(to bottom, #03071e, #0f172a);
   padding: 4rem 1rem 6rem 1rem;
   text-align: center;
@@ -75,7 +76,9 @@
       opacity: 0.8;
     "></div>
   </div>
-</header>
+</div>
+<!-- DONEO24 HEADER ENDE -->
+
 
 
 <section class="text-center mt-16 mb-12 px-4">
